# nzbdavkodi

./: .bandit  .codacy.yml  .editorconfig  .gitattributes  .gitignore  .pylintrc  AGENTS.md  BUG2.MD  BUGS3.md  BUGS4.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DONE.md  ISSUE_REPORT.md  LINUX_TUNING.md  PROBLEMS.md  PROXY.md  QA_SCAN_20260424.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  TODO_PANI.md  justfile  pyproject.toml  requirements-test.txt  troubleshooting.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
dev/: .env.example  .gitignore  README.md  docker-compose.yml  smoke.py
docs/: ARCHITECTURE.md  EXTENDING_FILTERS.md  pannal-xbmc-dv-hls-issue.md  proxy-architecture.md
mockups/: results-mockups.html
plans/: PROXY_EPIC_ARTICLE_HEALTH.md  PROXY_EPIC_NNTP_TUNING.md  REMAINING_COREELEC_SMOKE.md  REMAINING_OBSERVABILITY_SOAK.md  REMAINING_SEND_200_VALIDATION.md
plugin.video.nzbdav/: LICENSE.txt  addon.py  addon.xml  changelog.txt  service.py
scripts/: build_zip.py  generate_repo.py
tests/: conftest.py  test_cache.py  test_cache_errors.py  test_cache_prompt.py  test_combined_search.py  test_direct_indexers.py  test_dv_rpu.py  test_dv_source.py  test_fallback_streams.py  test_filter.py  test_generate_repo.py  test_http_util.py  test_hydra.py  test_i18n.py  (+18 more)
tmdbhelper-warmup-rs/: Cargo.toml  ssd-trim.py  ssd-trim.sh  tmdbhelper-warmup-rs.service
tmdbhelper-warmup-rs/src/: id.rs  lib.rs  main.rs  seed.rs  state.rs  worker.rs
tmdbhelper-warmup-rs/src/api/: mod.rs  types_collection.rs  types_movie.rs  types_person.rs  types_tv.rs
tmdbhelper-warmup-rs/src/cache/: art.rs  collection.rs  credits.rs  dimensions.rs  mod.rs  movie.rs  person.rs  tv.rs
tmdbhelper-warmup-rs/src/images/: mod.rs  texture_db.rs  texture_hash.rs
tmdbhelper-warmup-rs/tests/: api_movie_smoke.rs  cache_collection_roundtrip.rs  cache_movie_roundtrip.rs  cache_person_roundtrip.rs  cache_tv_roundtrip.rs  schema_fidelity.rs  state_smoke.rs
tmdbhelper-warmup-rs/tests/common/: mod.rs
tmdbhelper-warmup-rs/tests/fixtures/: ItemDetails-empty.db  tmdbhelper-warmed-movie-687163.sql
(+60 files in other folders)
